<resources>
    <string name="app_name">Pick Plug</string>

    <string name="drawer_open" translatable="false">drawer_open</string>
    <string name="drawer_close" translatable="false">drawer_close</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="default_error">Unable to reach Server.Please Try again</string>
    <string name="str_no_network_error">Please Check Your Internet Connection</string>

    <string name="nav_home">Home</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_manage_alert">Manage Alert</string>
    <string name="nav_about">About</string>
    <string name="nav_rate_n_review">Rate and Review</string>
    <string name="nav_legal">Legal</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_subscription">Subscription</string>
    <string name="nav_contact_us">Contact Us</string>

    <string name="bottom_nav_picks">Picks</string>
    <string name="bottom_nav_records">Records</string>
    <string name="bottom_nav_sportsbook">Sportsbook</string>


    <string name="btn_str_log_out">Log out</string>
    <string name="str_win">Win</string>
    <string name="str_lost">Lost</string>
    <string name="str_last_10_picks">Last 10 Picks</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_premium_picks">Premium Picks</string>
    <string name="str_free_picks">Free Picks</string>

    <string name="str_login">Login</string>
    <string name="str_email">E-mail Address</string>
    <string name="str_password">Password</string>
    <string name="str_forgot_password"><u>Forgot Password</u></string>
    <string name="str_register">Register</string>
    <string name="str_login_below_text_1">By Signing in you agree to our:</string>
    <string name="str_login_below_text_2">Terms of use, Privacy Policy and EULA</string>
    <string name="str_register_email">Enter Email Address</string>
    <string name="str_name">Enter Full Name</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_create_account">Create Account</string>
    <string name="facebook_app_id">1904989649827697</string>
    <string name="fb_login_protocol_scheme">fb1904989649827697</string>
    <string name="str_please_check_back_later">Please Check Back Later</string>
    <string name="str_save">Save</string>
    <string name="str_restore">Restore</string>
    <string name="str_purchase_subscription">Purchase a subscription to recieve All pick analysis and advice All prices are pro-rated.</string>
    <string name="str_best_value">Best Value</string>
    <string name="str_purchased">Purchased</string>
    <string name="str_analysis">Analysis</string>
    <string name="str_my_premium_picks">My Premium Picks</string>
    <string name="str_expiry_date">Expiry Date</string>
    <string name="str_edit_profile">Edit Profile</string>
    <string name="str_change_password">Change Password</string>
    <string name="str_current_password">Current Password</string>
    <string name="str_new_password">New Password</string>
    <string name="str_confirm_new_password">Confirm New Password</string>
    <string name="btn_str_save">Save</string>

    <string name="val_error_name">Name should not be blank</string>
    <string name="val_error_password">Password should not be blank</string>
    <string name="val_error_confirm_pwd">Confirm Password should not be blank</string>
    <string name="val_error_email_not_valid">Email id is not valid</string>
    <string name="val_error_pwd_confirm_pwd_not_match">password and confirm password does not match</string>
    <string name="val_error_email">Email should not be blank</string>
    <string name="val_error_current_pwd">Enter Current Password</string>
    <string name="val_error_new_pwd">Enter New Password</string>
    <string name="val_error_confirm_new_pwd">Enter Confirm Password</string>
    <string name="val_error_terms">Please accept terms &amp; conditions</string>

    <string name="str_reset_link">Password reset link send to your email.Please check your email</string>
    <string name="btn_str_submit">Submit</string>

    <string name="str_log_out_alert">Are you sure to logout?</string>
    <string name="str_pick_an_option">Pick an Option Below</string>

    <string name="str_sportsbook_desc">50% sign up bonus Elite customer service and fast payment Reduced juice</string>
    <string name="str_operating">Operating since 2000</string>

    <string name="str_my_profile">My Profile</string>
    <string name="str_no_records_found">No Records Found</string>

    <string name="about">Pick Plug, is a team of 5 of the world’s most successful and intelligent sports handicappers. We are here to offer you the best, winning sports picks on a daily basis.\n\n

Our goal is simple, to make you money on a consistent basis.\n\n

Our passion for sports handicapping is unmatched; we eat, sleep and breathe sports. This passion is exuded in everything we do and is the foundation for our success.
All of the members of our team have been making their “living” through sports handicapping for over 6 years now. Our team has combined for over 10,000 winning picks and $1,000,000 in total personal profits!\n\n

Our mission is to provide you with the best sports picks available on the planet, which will in turn enable you to make consistent profits. In our eyes there is nothing more rewarding than using our talents to help individuals like yourself make money.\n\n

Our vision is that within the next year we will be the world’s #1 provider of sports picks. We will accomplish this by offering you with consistent winning picks, honesty and integrity in our record keeping, and making you profits that will keep you using our service for years to come!</string>
    <string name="btn_atr_ok">OK</string>
    <string name="str_thank_you_purchase">Thank you for your purchase!</string>
    <string name="str_purchase_msg">If you have any questions or concerns, please email: picks@pickplug.com</string>
    <string name="str_no_subscriptions">You have 0 active subscriptions</string>

</resources>
