<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/white_ractangle_solid"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/str_thank_you_purchase"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_txt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/str_purchase_msg"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorGrey" />

    <Button
        android:id="@+id/dialog_btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:text="@string/btn_atr_ok"
        android:textAllCaps="false"
        android:textColor="@color/colorGreenText"
        android:textSize="16sp" />

</LinearLayout>