<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:mContext="com.picksplug.fragment.FragRecords">

    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:src="@drawable/win" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/records_txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorDarkGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/records_txt_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="14"
                android:textColor="@color/colorGreenText"
                android:textSize="28sp" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/records_txt_last_picks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWinBg"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/str_last_10_picks"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view_records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:visibility="gone"
        android:id="@+id/records_txt_no_records_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/str_no_records_found"
        android:textColor="@color/colorDarkGrey"
        android:textSize="18sp" />

</LinearLayout>
