<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/twenty"
            android:layout_marginStart="@dimen/twenty"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/twenty"
                android:layout_marginStart="@dimen/twenty"
                android:layout_marginTop="@dimen/ten"
                android:src="@drawable/applogo" />

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-20dp"
                android:gravity="center"
                android:text="@string/str_login"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_login_with_facebook"
                android:layout_width="match_parent"
                android:layout_height="@dimen/seventy"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/twenty5"
                android:src="@drawable/img_facebook" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/thirty"
                android:background="@drawable/img_textbox"
                android:paddingBottom="@dimen/ten"
                android:paddingLeft="@dimen/five"
                android:paddingRight="@dimen/five"
                android:paddingTop="@dimen/five">

                <ImageView
                    android:id="@+id/img_login_email"
                    android:layout_width="@dimen/twenty5"
                    android:layout_height="@dimen/twenty5"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/five"
                    android:paddingBottom="@dimen/five"
                    android:src="@drawable/img_email_icon" />

                <View
                    android:id="@+id/view_email"
                    android:layout_width="@dimen/one"
                    android:layout_height="@dimen/fourty"
                    android:layout_marginStart="@dimen/ten"
                    android:layout_toEndOf="@+id/img_login_email"
                    android:background="@color/colorGrey" />

                <EditText
                    android:id="@+id/edt_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/five"
                    android:layout_toEndOf="@+id/view_email"
                    android:hint="@string/str_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/colorEditText"
                    android:textColorHint="@color/colorEditText"
                    android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                    android:theme="@style/MyEditTextStyle" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five"
                android:background="@drawable/img_textbox"
                android:paddingBottom="@dimen/ten"
                android:paddingLeft="@dimen/five"
                android:paddingRight="@dimen/five"
                android:paddingTop="@dimen/five">

                <ImageView
                    android:id="@+id/img_login_password"
                    android:layout_width="@dimen/twenty5"
                    android:layout_height="@dimen/twenty5"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/five"
                    android:src="@drawable/img_key_icon" />

                <View
                    android:id="@+id/view_password"
                    android:layout_width="@dimen/one"
                    android:layout_height="@dimen/fourty"
                    android:layout_marginStart="@dimen/ten"
                    android:layout_toEndOf="@+id/img_login_password"
                    android:background="@color/colorGrey" />

                <EditText
                    android:id="@+id/edt_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/five"
                    android:layout_toEndOf="@+id/view_password"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@color/colorEditText"
                    android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                    android:theme="@style/MyEditTextStyle" />

            </RelativeLayout>

            <TextView
                android:id="@+id/txt_login_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/twenty"
                android:layout_marginTop="@dimen/five"
                android:clickable="true"
                android:gravity="end"
                android:text="@string/str_forgot_password"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/thirty5"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/sixty0"
                    android:layout_weight="0.5"
                    android:background="@drawable/img_white_button"
                    android:paddingBottom="@dimen/five"
                    android:text="@string/str_login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/sixty0"
                    android:layout_weight="0.5"
                    android:background="@drawable/img_yellow_button"
                    android:paddingBottom="@dimen/five"
                    android:text="@string/str_register"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/chk_agree_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="false"
                android:text="@string/str_login_below_text_1"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:theme="@style/checkBoxStyle" />

            <TextView
                android:id="@+id/txt_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/str_login_below_text_2"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>