<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:mContext="com.picksplug.fragment.FragMyProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/topbar"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/linear_drawer_profile"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/profile_bg_circle"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_profile"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/img_user_default"
                    app:civ_border_color="@color/colorSelTabText"
                    app:civ_border_width="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/img_premium_picks" />

            <TextView
                android:id="@+id/txt_user_premium_picks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_my_premium_picks"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_view_user_subscription"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txt_no_records"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/str_no_records_found"
            android:textColor="@color/colorDarkGrey"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/img_profile_white_rect"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/img_edit" />

                <TextView
                    android:id="@+id/txt_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_edit_profile"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_change_pwd"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/img_profile_white_rect"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/img_lock" />

                <TextView
                    android:id="@+id/txt_change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_change_password"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="16sp" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>

