<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_marginBottom="-16dp"
    android:layout_marginTop="-16dp"
    android:background="@drawable/img_subscription_row_back"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="12dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_txt_subs_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_premium_picks"
            android:textColor="@color/colorGreenText"
            android:textSize="16sp" />

        <TextView
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:id="@+id/list_txt_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorDarkGrey"
            android:textSize="12sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/list_linear_buy"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/img_buy_green"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/list_txt_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Buy $499"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_linear_buy_best_value"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/list_txt_buy_best_value"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/img_buy_green"
            android:gravity="center"
            android:text="Buy $999"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/list_txt_best_value"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/colorBestValueBg"
            android:gravity="center"
            android:text="@string/str_best_value"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_linear_purchased"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/list_txt_buy_purchased"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/img_buy_white"
            android:gravity="center"
            android:text="Buy $178"
            android:textColor="@color/colorGreenText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/list_txt_purchased"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/colorBrown"
            android:gravity="center"
            android:text="@string/str_purchased"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>