<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical">

    <include
        android:visibility="gone"
        android:id="@+id/forget_pwd_toolbar"
        layout="@layout/toolbar_activity" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/twenty"
                android:layout_marginStart="@dimen/twenty"
                android:layout_marginTop="@dimen/ten"
                android:src="@drawable/applogo" />

            <TextView
                android:id="@+id/lbl_forget_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/str_forgot_password"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/img_textbox"
                android:paddingBottom="@dimen/ten"
                android:paddingLeft="@dimen/five"
                android:paddingRight="@dimen/five"
                android:paddingTop="@dimen/five">

                <ImageView
                    android:id="@+id/img_email_icon"
                    android:layout_width="@dimen/twenty5"
                    android:layout_height="@dimen/twenty5"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/img_email_icon" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="@dimen/one"
                    android:layout_height="@dimen/fourty"
                    android:layout_marginStart="@dimen/ten"
                    android:layout_toEndOf="@+id/img_email_icon"
                    android:background="@color/colorGrey" />

                <EditText
                    android:id="@+id/forget_edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/five"
                    android:layout_toEndOf="@+id/view1"
                    android:hint="@string/str_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColorHint="@color/colorEditText"
                    android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                    android:theme="@style/MyEditTextStyle" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_forget_pwd"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/img_yellow_button"
                android:paddingBottom="@dimen/five"
                android:text="@string/btn_str_submit"
                android:textColor="@color/colorGreenText"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/forget_img_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/img_back" />

    </FrameLayout>

</LinearLayout>